[gd_scene load_steps=11 format=2]

[ext_resource path="res://MOD_CONTENT/Death Mech/Scripts/mech_grenade.gd" type="Script" id=1]
[ext_resource path="res://Sfx/bfh1_hit_01.ogg" type="AudioStream" id=2]
[ext_resource path="res://Textures/Weapons/hegrenade.png" type="Texture" id=3]
[ext_resource path="res://Imported_Mesh/Props/grenade.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Sfx/fishcatch.wav" type="AudioStream" id=5]
[ext_resource path="res://Textures/Particles/shine.png" type="Texture" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.1
height = 0.001

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 0.4, 0.4 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_billboard_mode = 1
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 6 )

[node name="MechGrenade" type="RigidBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Grenade" type="MeshInstance" parent="."]
mesh = ExtResource( 4 )
material/0 = SubResource( 2 )

[node name="Flash" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="FlashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 5.0
unit_size = 5.0
pitch_scale = 1.5

[node name="DestroySound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 10.0
unit_size = 10.0
pitch_scale = 0.4

[connection signal="timeout" from="Timer" to="." method="flash_toggle"]
